--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "dist/ecommerce/server/main.js", "use": "@vercel/node" },
-    { "src": "dist/ecommerce/browser/**", "use": "@vercel/static" }
+    {
+      "src": "angular.json",
+      "use": "@vercel/angular"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "dist/ecommerce/server/main.js" }
+    {
+      "src": "/(.*)",
+      "dest": "/dist/ecommerce/browser/index.html"
+    }
   ]
 }
