--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.2.1",
-    "@angular/common": "^20.2.0",
-    "@angular/compiler": "^20.2.0",
-    "@angular/core": "^20.2.0",
-    "@angular/forms": "^20.2.0",
-    "@angular/language-service": "^20.2.1",
-    "@angular/platform-browser": "^20.2.0",
-    "@angular/platform-server": "^20.2.0",
-    "@angular/router": "^20.2.0",
-    "@angular/ssr": "^20.2.0",
+    "@angular/animations": "20.2.1",
+    "@angular/common": "20.2.1",
+    "@angular/compiler": "20.2.1",
+    "@angular/core": "20.2.1",
+    "@angular/forms": "20.2.1",
+    "@angular/language-service": "20.2.1",
+    "@angular/platform-browser": "20.2.1",
+    "@angular/platform-server": "20.2.1",
+    "@angular/router": "20.2.1",
+    "@angular/ssr": "20.2.1",
     "@fortawesome/fontawesome-free": "^7.0.0",
     "@tailwindcss/postcss": "^4.1.12",
     "express": "^5.1.0",
@@ -49,9 +49,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.2.0",
-    "@angular/cli": "^20.2.0",
-    "@angular/compiler-cli": "^20.2.0",
+    "@angular/build": "20.2.1",
+    "@angular/cli": "20.2.1",
+    "@angular/compiler-cli": "20.2.1",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
