--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@angular/router": "20.2.1",
     "@angular/ssr": "20.2.1",
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
     "@tailwindcss/postcss": "^4.1.12",
     "express": "^5.1.0",
     "flowbite": "^3.1.2",
